--- a/srcs/requirements/mariadb/dockerfile
+++ b/srcs/requirements/mariadb/dockerfile
@@ -1,16 +1,16 @@
 FROM debian:buster
 
 
-RUN apt update && apt install -y mariadb-server
+RUN apt update -y && apt upgrade -y && apt-get install -y mariadb-server
 #This command updates the package lists in the image and installs the "mariadb-server" package. 
 #The "-y" flag is used to automatically answer "yes" to the installation prompt.
 
 COPY tools /var/www/
-#his command copies the contents of the "tools" directory from the build context to the "/var/www/" directory inside the image.
+#this command copies the contents of the "tools" directory from the build context to the "/var/www/" directory inside the image.
 #The build context is the directory from which the Docker build command is executed.
 
-RUN chmod +x /var/www/add_db.sh
-# This command sets the executable permissions (+x) on the "add_db.sh" script located in the "/var/www/" directory. 
+RUN chmod +x /var/www/data.sh
+# This command sets the executable permissions (+x) on the "data.sh" script located in the "/var/www/" directory. 
 #This allows the script to be executed later.
 
 RUN sed -i 's/bind-address/#bind-adress/' /etc/mysql/mariadb.conf.d/50-server.cnf
