--- a/srcs/requirements/mariadb/dockerfile
+++ b/srcs/requirements/mariadb/dockerfile
@@ -1,6 +1,5 @@
 FROM debian:buster
 
-
 RUN apt update -y && apt upgrade -y && apt-get install -y mariadb-server
 #This command updates the package lists in the image and installs the "mariadb-server" package. 
 #The "-y" flag is used to automatically answer "yes" to the installation prompt.
@@ -17,6 +16,8 @@ RUN sed -i 's/bind-address/#bind-adress/' /etc/mysql/mariadb.conf.d/50-server.cn
 #This command uses the sed command to modify the "50-server.cnf" configuration file for MariaDB located in "/etc/mysql/mariadb.conf.d/". 
 #It replaces any occurrence of "bind-address" with "#bind-address", effectively commenting out the line. 
 #This modification is typically done to allow connections to the MariaDB server from outside the container.
+
+EXPOSE 3360
 
 ENTRYPOINT [ "/var/www/data.sh" ]
 #This command sets the entrypoint for the container to be the "data.sh" script located in "/var/www/".
