--- a/srcs/requirements/wordpress/dockerfile
+++ b/srcs/requirements/wordpress/dockerfile
@@ -2,12 +2,16 @@ FROM debian:buster
 
 RUN apt update
 
-RUN apt -y install php7.3 php-mysqli php-fpm wget sendmail
+RUN apt -y install php7.3 php-mysqli php-fpm wget curl
 #This instruction uses the apt package manager to install several packages inside the container.
-#It installs PHP 7.3, PHP MySQLi extension, PHP-FPM, wget, and sendmail. 
+#It installs PHP 7.3, PHP MySQLi extension, PHP-FPM, wget. 
 #The -y flag is used to automatically answer "yes" to any prompts during the installation process.
 
-COPY ./tools/wordpress.sh /var/www/
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
+        && chmod +x wp-cli.phar \
+        && mv wp-cli.phar /usr/local/bin/wp
+
+COPY tools /var/www/
 #This instruction copies the file wordpress.sh from the ./tools/ directory on the local machine to the /var/www/ directory inside the container.
 #It assumes that the wordpress.sh script is located in a directory called tools relative to the current directory.
 
