modified a .env variable

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,10 +1,10 @@
 
 DB_NAME=wpdata
-DB_USER=yochakib
+DB_USER=Admin-yochakib
 DB_PSSWRD=1234
 
 MYSQL_DATABASE=wpdata
-MYSQL_ROOT_USER=yochakib
+MYSQL_ROOT_USER=Admin-yochakib
 MYSQL_ROOT_PASSWORD=1234
 HOST=mariadb
 
