--- a/srcs/.env
+++ b/srcs/.env
@@ -12,8 +12,8 @@ DOMAIN_NAME=yochakib.42.fr
 MYSQL_USER=elliech
 MYSQL_PASSWORD=666
 
-
-
+MARIADB=/home/yochakib/data/mariadb
+WORDPRESS=/home/yochakib/data/wordpress
 
 
 
